[package]
name = "pmutil"
version = "0.2.0"
authors = ["강동윤 <kdy1@outlook.kr>"]
description = "Utils for proc-macro"
repository = "https://github.com/kdy1/rust-pmutil"
readme = "README.md"
license = "Apache-2.0/MIT"

[dependencies]
quote = "0.6.3"
proc-macro2 = { version = "0.4.1", features = ["nightly"] }

[dependencies.syn]
version = "0.14.1"
features = ["derive", "parsing"]
default-features = false
