[workspace]
members = ["testing"]

[package]
name = "pmutil"
version = "0.5.3"
authors = ["강동윤 <kdy1@outlook.kr>"]
description = "Utils for proc-macro"
repository = "https://github.com/kdy1/rust-pmutil"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2018"

[dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0" }

[dependencies.syn]
version = "1.0"
features = ["derive", "parsing"]
default-features = false
